A small fix to the italian localization.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@99 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/locale/it/LC_MESSAGES/django.po
+++ b/core/locale/it/LC_MESSAGES/django.po
@@ -119,11 +119,11 @@ msgstr ""
 
 #: templates/accounts/index.html:25
 msgid "Firstname"
-msgstr ""
+msgstr "Nome"
 
 #: templates/accounts/index.html:26
 msgid "Lastname"
-msgstr ""
+msgstr "Cognome"
 
 #: templates/accounts/index.html:27
 msgid "Actions"
