--- a/products/locale/it/LC_MESSAGES/django.po
+++ b/products/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-01-31 19:02+0100\n"
+"POT-Creation-Date: 2010-02-01 23:15+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -128,6 +128,11 @@ msgstr "fornitori"
 msgid "Add"
 msgstr ""
 
+#: templates/products/add.html:16 templates/products/edit.html:16
+#, python-format
+msgid "Step %(step)s of %(step_count)s"
+msgstr "Passo %(step)s di %(step_count)s"
+
 #: templates/products/add.html:29 templates/products/edit.html:29
 #: templates/products/uoms/add.html:20 templates/products/uoms/edit.html:20
 #: templates/products/uoms/categories/add.html:21
@@ -152,8 +157,9 @@ msgstr ""
 msgid ""
 "Are you sure you want to delete this product and all its related "
 "informations?"
-msgstr "Sei sicuro di voler cancellare i dati di questo prodotto e di tutte "
-"le informazioni associate?"
+msgstr ""
+"Sei sicuro di voler cancellare i dati di questo prodotto e di tutte le "
+"informazioni associate?"
 
 #: templates/products/delete.html:20 templates/products/uoms/delete.html:21
 #: templates/products/uoms/categories/delete.html:22
@@ -283,7 +289,8 @@ msgstr "Tempo di pagamento"
 #: templates/products/uoms/delete.html:19
 msgid ""
 "Are you sure you want to delete this uom and all its related informations?"
-msgstr "Sei sicuro di voler cancellare i dati di questa unità di misura e di tutte "
+msgstr ""
+"Sei sicuro di voler cancellare i dati di questa unità di misura e di tutte "
 "le informazioni associate?"
 
 #: templates/products/uoms/index.html:26
@@ -308,5 +315,6 @@ msgstr "Categorie"
 msgid ""
 "Are you sure you want to delete this category and all its related "
 "informations?"
-msgstr "Sei sicuro di voler cancellare i dati di questo categoria e di tutte "
-"le informazioni associate?"
+msgstr ""
+"Sei sicuro di voler cancellare i dati di questo categoria e di tutte le "
+"informazioni associate?"
