--- a/projects/locale/it/LC_MESSAGES/django.po
+++ b/projects/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-04 01:02+0200\n"
+"POT-Creation-Date: 2010-07-04 20:47+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -16,37 +16,46 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: details.py:36 models.py:149
+#: details.py:18 models.py:22
+msgid "completed on"
+msgstr "completato il"
+
+#: details.py:24 models.py:20 models.py:164
+msgid "date due"
+msgstr "scadenza"
+
+#: details.py:33 models.py:170
+msgid "urgency"
+msgstr "priorità"
+
+#: details.py:36 models.py:137
 msgid "low"
 msgstr "bassa"
 
-#: details.py:39 models.py:150
+#: details.py:39 models.py:138
 msgid "medium"
 msgstr "media"
 
-#: details.py:42 models.py:151
+#: details.py:42 models.py:139
 msgid "high"
 msgstr "alta"
 
-#: details.py:45 models.py:152
+#: details.py:45 models.py:140
 msgid "critical"
 msgstr "critica"
 
-#: details.py:53
-msgid "event"
-msgstr "evento"
-
 #: forms.py:40
 msgid "The date due is greater than the parent's one."
-msgstr "La data di termine è più recente di quella superiore."
+msgstr "La data di termine è più recente di quella del genitore."
 
-#: menu.py:13 templates/projects/add.html:6 templates/projects/delete.html:6
+#: menu.py:16 templates/projects/add.html:6 templates/projects/delete.html:6
 #: templates/projects/edit.html:6 templates/projects/index.html:6
 #: templates/projects/index.html.py:14 templates/projects/view.html:6
 #: templates/projects/areas/add.html:6
 #: templates/projects/areas/add_ticket.html:6
 #: templates/projects/areas/delete.html:6 templates/projects/areas/edit.html:6
-#: templates/projects/areas/view.html:6
+#: templates/projects/areas/view.html:6 templates/projects/members/add.html:6
+#: templates/projects/members/delete.html:6
 #: templates/projects/milestones/add.html:6
 #: templates/projects/milestones/add_ticket.html:6
 #: templates/projects/milestones/delete.html:6
@@ -59,81 +68,118 @@ msgstr "La data di termine è più recente di quella superiore."
 msgid "Projects"
 msgstr "Progetti"
 
-#: models.py:25
-#, python-format
-msgid "(<a href=\"%(link)s\">%(object)s</a>) %(description)s on %(date)s"
-msgstr "(<a href=\"%(link)s\">%(object)s</a>) %(description)s il %(date)s"
+#: models.py:14 models.py:98 models.py:126 models.py:159
+msgid "project"
+msgstr "progetto"
 
-#: models.py:65
-msgid "Project manager"
-msgstr "Project manager"
+#: models.py:15 models.py:46 models.py:99 models.py:160
+msgid "name"
+msgstr "nome"
 
-#: models.py:125
+#: models.py:16 models.py:47 models.py:100 models.py:161
+msgid "description"
+msgstr "descrizione"
+
+#: models.py:17 models.py:101
+msgid "parent"
+msgstr "genitore"
+
+#: models.py:18 models.py:48 models.py:102 models.py:167
+msgid "author"
+msgstr "autore"
+
+#: models.py:19 models.py:103
+msgid "manager"
+msgstr "manager"
+
+#: models.py:21 models.py:51 models.py:104 models.py:162
+msgid "created on"
+msgstr "creato il"
+
+#: models.py:49
+msgid "project manager"
+msgstr "project manager"
+
+#: models.py:50
+msgid "members"
+msgstr "membri"
+
+#: models.py:52 models.py:163
+msgid "closed on"
+msgstr "chiuso il"
+
+#: models.py:107
 #, python-format
 msgid "%(name)s of %(project)s"
 msgstr "%(name)s di %(project)s"
 
-#: models.py:156
+#: models.py:125
+msgid "user"
+msgstr ""
+
+#: models.py:127
+msgid "joined at"
+msgstr "unito il"
+
+#: models.py:144
 msgid "defect"
 msgstr "difetto"
 
-#: models.py:157
+#: models.py:145
 msgid "task"
 msgstr "attività"
 
-#: models.py:158
+#: models.py:146
 msgid "enhancement"
 msgstr "aggiunta"
 
-#: models.py:162
+#: models.py:150
 msgid "new"
 msgstr "nuovo"
 
-#: models.py:163
+#: models.py:151
 msgid "won't fix"
 msgstr "da non correggere"
 
-#: models.py:164
+#: models.py:152
 msgid "duplicated"
 msgstr "duplicato"
 
-#: models.py:165
+#: models.py:153
 msgid "accepted"
 msgstr "accettato"
 
-#: models.py:166
+#: models.py:154
 msgid "in progress"
 msgstr "in lavorazione"
 
-#: models.py:167
+#: models.py:155
 msgid "resolved"
 msgstr "risolto"
 
-#: models.py:168
+#: models.py:156
 msgid "awaiting review"
 msgstr "in attesa di revisione"
 
-#: models.py:206
-msgid "current"
-msgstr "corrente"
+#: models.py:165
+msgid "area"
+msgstr "area"
 
-#: models.py:207
-msgid "superseded"
-msgstr "sostiuito"
+#: models.py:166
+msgid "milestone"
+msgstr "milestone"
 
-#: models.py:208
-msgid "no longer relevant"
-msgstr "obsoleto"
+#: models.py:168
+msgid "owners"
+msgstr "proprietari"
 
-#: models.py:224
-#, python-format
-msgid "Updated %(object)s"
-msgstr "Aggiornato %(object)s"
+#: models.py:169
+msgid "status"
+msgstr "stato"
 
-#: models.py:226
-#, python-format
-msgid "Created %(object)s"
-msgstr "Creato %(object)s"
+#: models.py:171
+msgid "type"
+msgstr "tipologia"
 
 #: templates/projects/add.html:15 templates/projects/areas.html:18
 #: templates/projects/index.html:18 templates/projects/members.html:18
@@ -141,6 +187,7 @@ msgstr "Creato %(object)s"
 #: templates/projects/areas/add.html:17
 #: templates/projects/areas/add_ticket.html:19
 #: templates/projects/areas/tickets.html:20
+#: templates/projects/members/add.html:17
 #: templates/projects/milestones/add.html:17
 #: templates/projects/milestones/add_ticket.html:19
 #: templates/projects/milestones/tickets.html:20
@@ -152,12 +199,13 @@ msgstr ""
 #: templates/projects/areas/add.html:22
 #: templates/projects/areas/add_ticket.html:24
 #: templates/projects/areas/edit.html:22
+#: templates/projects/members/add.html:22
 #: templates/projects/milestones/add.html:22
 #: templates/projects/milestones/add_ticket.html:24
 #: templates/projects/milestones/edit.html:22
 #: templates/projects/tickets/add.html:22
 #: templates/projects/tickets/edit.html:22
-#: templates/projects/tickets/view.html:57
+#: templates/projects/tickets/view.html:58
 msgid "Save"
 msgstr ""
 
@@ -166,14 +214,15 @@ msgid "Areas"
 msgstr "Aree"
 
 #: templates/projects/delete.html:15 templates/projects/edit.html:25
-#: templates/projects/view.html:30 templates/projects/areas/delete.html:17
+#: templates/projects/view.html:29 templates/projects/areas/delete.html:17
 #: templates/projects/areas/edit.html:27 templates/projects/areas/view.html:31
+#: templates/projects/members/delete.html:17
 #: templates/projects/milestones/delete.html:17
 #: templates/projects/milestones/edit.html:27
 #: templates/projects/milestones/view.html:31
 #: templates/projects/tickets/delete.html:17
 #: templates/projects/tickets/edit.html:27
-#: templates/projects/tickets/view.html:62
+#: templates/projects/tickets/view.html:63
 msgid "Delete"
 msgstr ""
 
@@ -182,14 +231,18 @@ msgid ""
 "Are you sure you want to delete this project and all its related "
 "informations?"
 msgstr ""
+"Sei sicuro di voler cancellare i dati di questo progetto e di tutte le "
+"informazioni associate?"
 
 #: templates/projects/delete.html:21 templates/projects/areas/delete.html:23
+#: templates/projects/members/delete.html:23
 #: templates/projects/milestones/delete.html:23
 #: templates/projects/tickets/delete.html:23
 msgid "Yes"
 msgstr ""
 
 #: templates/projects/delete.html:22 templates/projects/areas/delete.html:24
+#: templates/projects/members/delete.html:24
 #: templates/projects/milestones/delete.html:24
 #: templates/projects/tickets/delete.html:24
 msgid "No"
@@ -198,6 +251,7 @@ msgstr ""
 #: templates/projects/delete.html:27 templates/projects/edit.html:24
 #: templates/projects/areas/delete.html:29
 #: templates/projects/areas/edit.html:26
+#: templates/projects/members/delete.html:29
 #: templates/projects/milestones/delete.html:29
 #: templates/projects/milestones/edit.html:26
 #: templates/projects/tickets/delete.html:29
@@ -206,14 +260,15 @@ msgid "View"
 msgstr ""
 
 #: templates/projects/delete.html:28 templates/projects/edit.html:15
-#: templates/projects/view.html:29 templates/projects/areas/delete.html:30
+#: templates/projects/view.html:28 templates/projects/areas/delete.html:30
 #: templates/projects/areas/edit.html:17 templates/projects/areas/view.html:30
+#: templates/projects/members/delete.html:30
 #: templates/projects/milestones/delete.html:30
 #: templates/projects/milestones/edit.html:17
 #: templates/projects/milestones/view.html:30
 #: templates/projects/tickets/delete.html:30
 #: templates/projects/tickets/edit.html:17
-#: templates/projects/tickets/view.html:61
+#: templates/projects/tickets/view.html:62
 msgid "Edit"
 msgstr ""
 
@@ -223,7 +278,7 @@ msgstr "Membri"
 
 #: templates/projects/milestones.html:14 templates/projects/view.html:18
 msgid "Milestones"
-msgstr "Milestone"
+msgstr "Milestones"
 
 #: templates/projects/tickets.html:14 templates/projects/view.html:19
 #: templates/projects/areas/tickets.html:16
@@ -231,13 +286,9 @@ msgstr "Milestone"
 #: templates/projects/milestones/tickets.html:16
 #: templates/projects/milestones/view.html:19
 msgid "Tickets"
-msgstr "Ticket"
+msgstr "Tickets"
 
-#: templates/projects/timeline.html:14 templates/projects/view.html:21
-msgid "Timeline"
-msgstr "Timeline"
-
-#: templates/projects/view.html:16 templates/projects/view.html.py:24
+#: templates/projects/view.html:16 templates/projects/view.html.py:23
 #: templates/projects/areas/view.html:18 templates/projects/areas/view.html:22
 #: templates/projects/milestones/view.html:18
 #: templates/projects/milestones/view.html:22
@@ -245,7 +296,7 @@ msgstr "Timeline"
 msgid "Details"
 msgstr ""
 
-#: templates/projects/view.html:26 templates/projects/areas/view.html:24
+#: templates/projects/view.html:25 templates/projects/areas/view.html:24
 #: templates/projects/milestones/view.html:24
 #: templates/projects/tickets/view.html:20
 msgid "Description"
@@ -255,16 +306,28 @@ msgstr "Descrizione"
 msgid ""
 "Are you sure you want to delete this area and all its related informations?"
 msgstr ""
+"Sei sicuro di voler cancellare i dati di quest'area e di tutte le "
+"informazioni associate?"
 
 #: templates/projects/areas/view.html:26
 msgid "Sub-areas"
 msgstr "Sotto-aree"
+
+#: templates/projects/members/delete.html:21
+msgid ""
+"Are you sure you want to delete this membership and all its related "
+"informations?"
+msgstr ""
+"Sei sicuro di voler cancellare i dati di questo membro e di tutte le "
+"informazioni associate?"
 
 #: templates/projects/milestones/delete.html:21
 msgid ""
 "Are you sure you want to delete this milestone and all its related "
 "informations?"
 msgstr ""
+"Sei sicuro di voler cancellare i dati di questa milestone e di tutte le "
+"informazioni associate?"
 
 #: templates/projects/milestones/view.html:26
 msgid "Sub-milestones"
@@ -274,6 +337,8 @@ msgstr "Sotto-milestones"
 msgid ""
 "Are you sure you want to delete this ticket and all its related informations?"
 msgstr ""
+"Sei sicuro di voler cancellare i dati di questo ticket e di tutte le "
+"informazioni associate?"
 
 #: templates/projects/tickets/view.html:22
 msgid "Comments"
@@ -284,8 +349,9 @@ msgstr "Commenti"
 msgid ""
 "Posted by <a href=\"%(user_link)s\">%(user_name)s</a> on %(submit_date)s."
 msgstr ""
+"Scritto da <a href=\"%(user_link)s\">%(user_name)s</a> il %(submit_date)s."
 
 #: templates/projects/tickets/view.html:41
 #, python-format
-msgid "<strong>%(comment_count)s</strong> comments have been posted."
-msgstr ""
+msgid "<strong>%(comment_count)s</strong> comments."
+msgstr "<strong>%(comment_count)s</strong> commenti."
