projects: renamed "won't fix" option to "invalid".
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@212 71535020-02ba-11df-897e-95fb7fca2173

--- a/projects/locale/it/LC_MESSAGES/django.po
+++ b/projects/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2010-07-06 11:39+0200\n"
+"POT-Creation-Date: 2010-07-06 15:39+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -130,8 +130,8 @@ msgid "new"
 msgstr "nuovo"
 
 #: models.py:140
-msgid "won't fix"
-msgstr "da non correggere"
+msgid "invalid"
+msgstr "invalido"
 
 #: models.py:141
 msgid "duplicated"
