- Updated requirements notes in the README file. - Added "core.taxonomy" and "core.wysiwyg" apps to the "settings" template file.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@229 71535020-02ba-11df-897e-95fb7fca2173

--- a/README
+++ b/README
@@ -21,6 +21,9 @@ Make sure you have the following pre-requisites installed:
  * python 2.6 (required)
    http://www.python.org
 
+ * pyYaml 3.1.0 (required)
+   http://pyyaml.org/wiki
+
  * django 1.2.1 (required)
    http://www.djangoproject.com/
 
