--- a/README
+++ b/README
@@ -18,19 +18,16 @@ PRE-REQUISITES
 
 Make sure you have the following pre-requisites installed:
 
- * python 2.6 (required)
+ * python >= 2.6 (required)
    http://www.python.org
 
- * pytz 2011h (required)
+ * pytz >= 2011h (required)
    http://pytz.sourceforge.net/
 
- * pyYaml 3.1.0 (required)
-   http://pyyaml.org/wiki
-
- * python-markdown 2.0 (required)
+ * python-markdown >= 2.0 (required)
    http://www.freewisdom.org/projects/python-markdown
 
- * django 1.3.0 (required)
+ * django >= 1.3.1 (required)
    http://www.djangoproject.com
 
  * apache2 (optional)
