--- a/README
+++ b/README
@@ -27,6 +27,9 @@ Make sure you have the following pre-requisites installed:
  * python-markdown >= 2.0 (required)
    http://www.freewisdom.org/projects/python-markdown
 
+ * icalendar >= 2.2 (required)
+   http://pypi.python.org/pypi/icalendar
+
  * django >= 1.3.1 (required)
    http://www.djangoproject.com
 
