Improved apache integration stuff.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@537 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/apache/README
+++ b/core/apache/README
@@ -1,5 +1,7 @@
 INSTRUCTIONS
 ============
 
-Remember to replace, in "apache_django_cong.wsgi" file, the <PROMETEO_PATH>
-token with your local prometeo installation path.
+- Copy "prometeo_wsgi.conf" into "apache2/sites-available" folder.
+- Replace all occurences of "<PROMETEO_PATH>" in "prometeo_wsgi.conf" with your
+  local Prometeo installation path.
+- Restart the Apache web-server.
