Improved README files.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@572 71535020-02ba-11df-897e-95fb7fca2173

--- a/README
+++ b/README
@@ -1,8 +1,9 @@
-PROMETEO
-Free your work. Free your business.
-(c) 2011, Emanuele Bertoldi
-<emanuele.bertoldi@gmail.com>
-===================================
+=========================================================
+PROMETEO - Free your business.
+
+---------------------------------------------------------
+(c) 2011, Emanuele Bertoldi <emanuele.bertoldi@gmail.com>
+=========================================================
 
 
 INTRODUCTION
