Changed project's tagline.
git-svn-id: http://prometeo-erp.googlecode.com/svn/branches/new-era@573 71535020-02ba-11df-897e-95fb7fca2173

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 =========================================================
-PROMETEO - Free your business.
+PROMETEO - Free your business
 
 ---------------------------------------------------------
 (c) 2011, Emanuele Bertoldi <emanuele.bertoldi@gmail.com>
