--- a/themes/default/README
+++ b/themes/default/README
@@ -1,5 +1,5 @@
 =========================================================
-PROMETEO - Free your business.
+PROMETEO - Free your business
 
 ---------------------------------------------------------
 (c) 2011, Emanuele Bertoldi <emanuele.bertoldi@gmail.com>
