--- a/accounting/locale/it/LC_MESSAGES/django.po
+++ b/accounting/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-09 09:24+0100\n"
+"POT-Creation-Date: 2011-11-09 10:26+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -59,8 +59,8 @@ msgid "order ref. no."
 msgstr "rif. ordine #"
 
 #: models.py:60
-msgid "order ref. date"
-msgstr "rif. ordine data"
+msgid "on"
+msgstr "del"
 
 #: models.py:61
 msgid "terms of shipping"
