Moved all the settings-related logic inside a new "settings" package which allows localization and modularization.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@673 71535020-02ba-11df-897e-95fb7fca2173

--- a/README
+++ b/README
@@ -47,7 +47,7 @@ Make sure you have the following pre-requisites installed:
 INSTALLATION
 ============
 
- 1. cp settings.py.tmpl settings.py
+ 1. cp settings/base.py.tmpl settings/base.py
  
  2. Edit the settings.py content.
  
