--- a/accounting/locale/it/LC_MESSAGES/django.po
+++ b/accounting/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-09 10:26+0100\n"
+"POT-Creation-Date: 2011-11-09 12:45+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -69,6 +69,10 @@ msgstr "termini di spedizione"
 #: models.py:62
 msgid "amount"
 msgstr "importo"
+
+#: models.py:63
+msgid "Keep it blank to use the owner's default one"
+msgstr "Lasciare bianco per usare il valore predefinito del proprietario"
 
 #: models.py:63
 msgid "terms of payment"
