Improved italian localization.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@679 71535020-02ba-11df-897e-95fb7fca2173

--- a/accounting/locale/it/LC_MESSAGES/django.po
+++ b/accounting/locale/it/LC_MESSAGES/django.po
@@ -80,7 +80,7 @@ msgstr "termini di pagamento"
 
 #: models.py:64
 msgid "due date"
-msgstr "entro il"
+msgstr "scadenza"
 
 #: models.py:66
 msgid "entries"
