- Improved report management with a proof of concept of report templates. - Fixed localization of "stock" app.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@682 71535020-02ba-11df-897e-95fb7fca2173

--- a/stock/locale/it/LC_MESSAGES/django.po
+++ b/stock/locale/it/LC_MESSAGES/django.po
@@ -103,7 +103,7 @@ msgid "on"
 msgstr "del"
 
 #: models.py:115
-msgid "mean of delivery"
+msgid "means of delivery"
 msgstr "a mezzo"
 
 #: models.py:116
