--- a/projects/locale/it/LC_MESSAGES/django.po
+++ b/projects/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-22 16:00+0100\n"
+"POT-Creation-Date: 2011-11-25 11:54+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -89,6 +89,14 @@ msgstr ""
 #: models.py:111
 msgid "milestones"
 msgstr ""
+
+#: models.py:161
+msgid ""
+"Use <a href=\"http://daringfireball.net/projects/markdown/syntax\">MarkDown "
+"syntax</a>."
+msgstr ""
+"Usare la <a href=\"http://daringfireball.net/projects/markdown/syntax\">sintassi "
+"MarkDown</a>."
 
 #: models.py:164
 msgid "type"
