--- a/knowledge/locale/it/LC_MESSAGES/django.po
+++ b/knowledge/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-25 11:49+0100\n"
+"POT-Creation-Date: 2011-11-25 14:57+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -27,8 +27,8 @@ msgid ""
 "Use <a href=\"http://daringfireball.net/projects/markdown/syntax\">MarkDown "
 "syntax</a>."
 msgstr ""
-"Usare la <a href=\"http://daringfireball.net/projects/markdown/syntax\">sintassi "
-"MarkDown</a>."
+"Usare la <a href=\"http://daringfireball.net/projects/markdown/syntax"
+"\">sintassi MarkDown</a>."
 
 #: models.py:41 models.py:75
 msgid "body"
@@ -159,37 +159,46 @@ msgstr "%(class)s %(name)s creato da %(author)s"
 #: signals.py:138
 #, python-format
 msgid "%(class)s %(name)s changed"
-msgstr ""
+msgstr "%(class)s %(name)s modificato"
 
 #: signals.py:156
 #, python-format
 msgid "%(class)s %(name)s deleted"
-msgstr ""
+msgstr "%(class)s %(name)s eliminato"
 
 #: signals.py:175
 #, python-format
 msgid "%(author)s commented %(class)s %(name)s"
-msgstr ""
+msgstr "%(author)s ha commentato %(class)s %(name)s"
 
 #: signals.py:196
 msgid "comment deleted"
-msgstr ""
+msgstr "commento eliminato"
+
+#: signals.py:217
+#, python-format
+msgid "%(author)s answered to the %(class)s %(name)s"
+msgstr "%(author)s ha risposto alla %(class)s %(name)s"
+
+#: signals.py:239
+msgid "answer deleted"
+msgstr "risposta eliminata"
 
 #: management/__init__.py:36
 msgid "Main menu for knowledge app"
-msgstr ""
+msgstr "Menu principale per la gestione della conoscenza"
 
 #: management/__init__.py:41
 msgid "Main menu for a wiki page"
-msgstr ""
+msgstr "Menu principale per una pagina Wiki"
 
 #: management/__init__.py:46
 msgid "Main menu for a FAQ"
-msgstr ""
+msgstr "Menu principale per una FAQ"
 
 #: management/__init__.py:51
 msgid "Main menu for a poll"
-msgstr ""
+msgstr "Menu principale per un sondaggio"
 
 #: management/__init__.py:56
 msgid "Knowledge"
@@ -231,43 +240,43 @@ msgstr "Cronologia"
 
 #: management/__init__.py:138
 msgid "Wiki page created"
-msgstr ""
+msgstr "Creazione pagina Wiki"
 
 #: management/__init__.py:143
 msgid "Wiki page changed"
-msgstr ""
+msgstr "Modifica pagina Wiki"
 
 #: management/__init__.py:148
 msgid "Wiki page deleted"
-msgstr ""
+msgstr "Eliminazione pagina Wiki"
 
 #: management/__init__.py:153
-msgid "Wiki page revision created"
-msgstr ""
-
-#: management/__init__.py:158
 msgid "FAQ created"
 msgstr "Creazione FAQ"
 
-#: management/__init__.py:163
-msgid "FAQ changed"
-msgstr "Modifica FAQ"
-
-#: management/__init__.py:168
+#: management/__init__.py:158
 msgid "FAQ deleted"
 msgstr "Eliminazione FAQ"
+
+#: management/__init__.py:163
+msgid "Answer created"
+msgstr "Aggiunta risposta"
+
+#: management/__init__.py:168
+msgid "Answer deleted"
+msgstr "Eliminazione risposta"
 
 #: management/__init__.py:173
 msgid "Poll created"
 msgstr "Creazione sondaggio"
 
 #: management/__init__.py:178
-msgid "Poll changed"
-msgstr "Modifica sondaggio"
-
-#: management/__init__.py:183
 msgid "Poll deleted"
 msgstr "Eliminazione sondaggio"
+
+#: management/__init__.py:183
+msgid "Poll closed"
+msgstr "Chiusura sondaggio"
 
 #: views/faq.py:65
 msgid "The FAQ has been saved."
@@ -279,7 +288,7 @@ msgstr "Il sondaggio è stato salvato."
 
 #: views/polls.py:93
 msgid "Sorry, this poll is already closed."
-msgstr "Spiacente, questo sondaggio è già chiuso."
+msgstr "Spiacenti, questo sondaggio è già chiuso."
 
 #: views/polls.py:101
 msgid "Thank you for your vote."
@@ -291,7 +300,7 @@ msgstr "Grazie. Il tuo voto è stato aggiornato."
 
 #: views/polls.py:109
 msgid "Sorry, you've selected an invalid choice."
-msgstr "Spiacente, hai selezionato una scelta invalida."
+msgstr "Spiacenti, hai selezionato una scelta invalida."
 
 #: views/wiki.py:87
 msgid "The page has been saved."
