--- a/themes/default/locale/it/LC_MESSAGES/django.po
+++ b/themes/default/locale/it/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-11-25 11:40+0100\n"
+"POT-Creation-Date: 2011-11-25 14:59+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -721,6 +721,7 @@ msgid "No description."
 msgstr "Nessuna descrizione."
 
 #: templates/knowledge/poll_detail.html:71
+#, python-format
 msgid "<strong>%(vote_count)s</strong> vote(s)"
 msgstr "<strong>%(vote_count)s</strong> voto/i"
 
@@ -768,6 +769,30 @@ msgstr "Conoscenza"
 msgid "Revisions"
 msgstr "Revisioni"
 
+#: templates/knowledge/activities/answer-created.html:4
+#, python-format
+msgid ""
+"\n"
+"<p><a href=\"%(author_link)s\">%(author)s</a> has answered to the %(class)s "
+"<a href=\"%(link)s\">%(name)s</a>:</p>\n"
+"<blockquote>%(answer)s</blockquote>\n"
+msgstr ""
+"\n"
+"<p><a href=\"%(author_link)s\">%(author)s</a> ha risposto alla "
+"%(class)s <a href=\"%(link)s\">%(name)s</a>:</p>\n"
+"<blockquote>%(answer)s</blockquote>\n"
+
+#: templates/knowledge/activities/answer-deleted.html:3
+#, python-format
+msgid ""
+"\n"
+"<p>An answer of <a href=\"%(author_link)s\">%(author)s</a> has been deleted "
+"from %(class)s <a href=\"%(link)s\">%(name)s</a>.</p>\n"
+msgstr ""
+"\n"
+"<p>Una risposta di <a href=\"%(author_link)s\">%(author)s</a> è stata "
+"eliminata da %(class)s <a href=\"%(link)s\">%(name)s</a>.</p>\n"
+
 #: templates/menus/bookmark_delete.html:27
 msgid "Are you sure you want to delete this bookmark?"
 msgstr "Sei sicuro di voler eliminare questo segnalibro?"
@@ -803,7 +828,7 @@ msgstr "Sottoscrivi?"
 
 #: templates/notifications/notification_list.html:42
 msgid "Email?"
-msgstr "Spedisci email?"
+msgstr ""
 
 #: templates/partners/address_delete.html:6
 msgid "Delete address"
