Added a warning about the name of the root folder.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@794 71535020-02ba-11df-897e-95fb7fca2173

--- a/README
+++ b/README
@@ -43,9 +43,10 @@ Make sure you have the following pre-requisites installed:
  * mod_wsgi (optional)
    http://code.google.com/p/modwsgi
 
-
 INSTALLATION
 ============
+
+ WARNING: at the moment the package MUST be installed in a folder called "prometeo".
 
  1. cp settings/base.py.tmpl settings/base.py
  
