--- a/README
+++ b/README
@@ -37,6 +37,9 @@ Make sure you have the following pre-requisites installed:
  * django >= 1.3.1 (required)
    http://www.djangoproject.com
 
+ * south >= 0.7.3 (optional)
+   http://south.aeracode.org/
+
  * apache2 (optional)
    http://httpd.apache.org
 
