Added note for installation with South.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@831 71535020-02ba-11df-897e-95fb7fca2173

--- a/README
+++ b/README
@@ -55,7 +55,9 @@ INSTALLATION
  
  2. Edit the settings/base.py content.
  
- 3. python manage.py syncdb
+ 3. It's time to create the DB schema (you need to use the --all option if you're using South):
+
+    python manage.py syncdb (--all)
    
  4. To test the installation, run:
  
