- Fixed static files management in the development environment. - Updated README files.
git-svn-id: http://prometeo-erp.googlecode.com/svn/trunk@844 71535020-02ba-11df-897e-95fb7fca2173

--- a/core/apache/README
+++ b/core/apache/README
@@ -1,5 +1,24 @@
+=========================================================
+PROMETEO - Free your business
+
+---------------------------------------------------------
+(c) 2011, Emanuele Bertoldi <emanuele.bertoldi@gmail.com>
+=========================================================
+
+
+INTRODUCTION
+============
+
+This document describes how to use Prometeo and Apache Web Server together.
+
+
 INSTRUCTIONS
 ============
 
-Includes the "prometeo.conf" file inside your virtual host configuration, then replace
-all occurrencies of "<PROMETEO_PATH>" token with your local Prometeo installation path.
+1. Includes the "prometeo.conf" file inside your virtual host configuration.
+
+2. Open it and replace <PROMETEO_PATH> with your local Prometeo installation root.
+
+3. From the <PROMETEO_PATH> execute:
+
+   python manage.py collectstatic
